--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='ja'>
   <head>
     <title>Tasklist</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -14,5 +14,6 @@
     <div class="container">
       <%= render 'layouts/flash_tasks' %>
     <%= yield %>
+    </div>
   </body>
 </html>
