--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,10 +1,5 @@
 <h1>id: <%= @task.id %>のタスクの編集ページ</h1>
 
-<%= form_with(model: @task) do |f| %>
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
+<%= render 'form', message: @message %>
 
-  <%= f.submit '投稿' %>
-<% end %>
-
-<%= link_to '一覧に戻る', tasks_path %>
+<%= link_to '一覧に戻る', messages_path %>
