--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,6 @@
 <h1>id:<%= @task.id %>のタスク詳細</h1>
 
-<p>ステータス: <%= @message.status %></p>
+<p>ステータス:<%= @task.status %></p>
 <p>タスク:<%= @task.content %></p>
 
 
