--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,5 +5,6 @@
     <li><%= link_to task.id, task %> :  <%= task.status %> &gt; <%= task.content %></li>
   <% end %>
 </ul>
+<%== pagy_nav(@pagy) %>
 
 <%= link_to 'タスクの追加', new_task_path %>
